// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hierarchy component renders Layout 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="layout__spinner"
      >
        <div
          class="react-spinner-material"
          style="width: 80px; height: 80px; border-color: red; border-width: 8px;"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="layout__spinner"
    >
      <div
        class="react-spinner-material"
        style="width: 80px; height: 80px; border-color: red; border-width: 8px;"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`hierarchy component renders Layout 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="layout__error"
      >
        There has been an error. Please try again later.
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="layout__error"
    >
      There has been an error. Please try again later.
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`hierarchy component renders Layout 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Carousel-root-1 layout layout__carousel"
      >
        <div
          class="CarouselItem"
        >
          <div
            style="webkit-transform: none; transform: none; webkit-transition: -webkit-transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
          >
            <div
              class="pokemon"
              id="pokemon"
            >
              <div
                class="pokemon__details"
              >
                <div
                  class="pokemon__details_table"
                >
                  <pokemon-abilities
                    resistant="Water,Electric,Grass,Fighting,Fairy"
                    weaknesses="Fire,Ice,Flying,Psychic"
                  />
                  <div
                    class="pokemon__details_attacks"
                  >
                    <div
                      class="chips"
                    >
                      <div
                        class="chip__text"
                      >
                        Fast
                      </div>
                      <pokemon-attacks
                        damage="12"
                        name="Tackle"
                      />
                    </div>
                    <div
                      class="chips"
                    >
                      <div
                        class="chip__text"
                      >
                        Special
                      </div>
                      <div>
                        <pokemon-attacks
                          damage="70"
                          name="Power Whip"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="pokemon__general"
              >
                <pokemon-general-attr
                  image="https://img.pokemondb.net/artwork/bulbasaur.jpg"
                  name="Bulbasaur"
                  number="001"
                />
              </div>
              <div
                class="pokemon__evolutions"
              >
                <table
                  class="pokemon__evolutions_table"
                >
                  <tbody>
                    <tr>
                      <td>
                        <div
                          class="pokemon__evolutions_container"
                        >
                          <p>
                            Evolution
                          </p>
                          <div
                            class="pokemon__evolutions_items"
                          >
                            <pokemon-evolution
                              image="https://img.pokemondb.net/artwork/bulbasaur.jpg"
                              name="Bulbasaur"
                              number="001"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
                              />
                            </svg>
                            <pokemon-evolution
                              image="https://img.pokemondb.net/artwork/ivysaur.jpg"
                              name="Ivysaur"
                              number="002"
                            />
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="pokemon__details_items"
                      >
                        <pokemon-sizes
                          heightmax="0.79m"
                          heightmin="0.61m"
                          weightmax="7.76kg"
                          weightmin="6.04kg"
                        />
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Carousel-root-1 layout layout__carousel"
    >
      <div
        class="CarouselItem"
      >
        <div
          style="webkit-transform: none; transform: none; webkit-transition: -webkit-transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <div
            class="pokemon"
            id="pokemon"
          >
            <div
              class="pokemon__details"
            >
              <div
                class="pokemon__details_table"
              >
                <pokemon-abilities
                  resistant="Water,Electric,Grass,Fighting,Fairy"
                  weaknesses="Fire,Ice,Flying,Psychic"
                />
                <div
                  class="pokemon__details_attacks"
                >
                  <div
                    class="chips"
                  >
                    <div
                      class="chip__text"
                    >
                      Fast
                    </div>
                    <pokemon-attacks
                      damage="12"
                      name="Tackle"
                    />
                  </div>
                  <div
                    class="chips"
                  >
                    <div
                      class="chip__text"
                    >
                      Special
                    </div>
                    <div>
                      <pokemon-attacks
                        damage="70"
                        name="Power Whip"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pokemon__general"
            >
              <pokemon-general-attr
                image="https://img.pokemondb.net/artwork/bulbasaur.jpg"
                name="Bulbasaur"
                number="001"
              />
            </div>
            <div
              class="pokemon__evolutions"
            >
              <table
                class="pokemon__evolutions_table"
              >
                <tbody>
                  <tr>
                    <td>
                      <div
                        class="pokemon__evolutions_container"
                      >
                        <p>
                          Evolution
                        </p>
                        <div
                          class="pokemon__evolutions_items"
                        >
                          <pokemon-evolution
                            image="https://img.pokemondb.net/artwork/bulbasaur.jpg"
                            name="Bulbasaur"
                            number="001"
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
                            />
                          </svg>
                          <pokemon-evolution
                            image="https://img.pokemondb.net/artwork/ivysaur.jpg"
                            name="Ivysaur"
                            number="002"
                          />
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="pokemon__details_items"
                    >
                      <pokemon-sizes
                        heightmax="0.79m"
                        heightmin="0.61m"
                        weightmax="7.76kg"
                        weightmin="6.04kg"
                      />
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
